<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">ZydcKJBox</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world" tools:ignore="MissingTranslation">Hello world!</string>
    <string name="copy_right">Xian ZhongYi DongKong KJ all rights reserved</string>
    <string name="corporate_name">Lthyh all rights reserved</string>
    <string name="main_title_tv">Intelligent Monitoring</string>
    <string name="user_name0">nickname:</string>
    <string name="user_name">Box</string>
    <string name="user_age" tools:ignore="MissingTranslation">6 years</string>
    <string name="user_date0" tools:ignore="MissingTranslation">birthday:</string>
    <string name="user_binding">device:</string>
    <string name="user_device">FF:FF:FF:FF:FF</string>
    <string name="main_max_temp1">highest:</string>
    <string name="main_max_temp" tools:ignore="MissingTranslation">Max Temp</string>
    <string name="main_max_temp2">℃</string>
    <string name="main_min_temp1">lowest:</string>
    <string name="main_min_temp" tools:ignore="MissingTranslation">0</string>
    <string name="main_min_temp2">℃</string>
    <string name="main_temp">37.2</string>
    <string name="main_temp_unit">℃</string>
    <string name="main_max_hum1">highest:</string>
    <string name="main_max_hum">38.5</string>
    <string name="main_max_hum2">%RH</string>
    <string name="main_min_hum1">lowest:</string>
    <string name="main_min_hum">26.6</string>
    <string name="main_min_hum2">%RH</string>
    <string name="main_hum" tools:ignore="MissingTranslation">37.2</string>
    <string name="main_hum_unit" tools:ignore="MissingTranslation">℃</string>
    <string name="main_temp_type1" tools:ignore="MissingTranslation">normothermia</string>
    <string name="main_temp_type2" tools:ignore="MissingTranslation">high fever</string>
    <string name="main_temp_type3">ambient temp</string>
    <string name="main_tv_temp" tools:ignore="MissingTranslation">Real Time Monitoring</string>
    <string name="main_tv_setting">Feature Set</string>
    <string name="main_tv_find">Find Devices</string>
    <string name="userlist_title_tv">User</string>
    <string name="userlist_item_btn_text">binding</string>
    <string name="userlist_item_btn_modify">Modify</string>
    <string name="userlist_item_btn_delete">Remove</string>
    <string name="adduser_title_tv">New User</string>
    <string name="adduser_title_tv1">Usermod</string>
    <string name="adduser_btn_binding">binding</string>
    <string name="adduser_tv_name" tools:ignore="MissingTranslation">NAME:</string>
    <string name="adduser_tv_sex" tools:ignore="MissingTranslation">SEX:</string>
    <string name="adduser_tv_sex_man" tools:ignore="MissingTranslation">male</string>
    <string name="adduser_tv_sex_woman" tools:ignore="MissingTranslation">lady</string>
    <string name="adduser_tv_age" tools:ignore="MissingTranslation">BIRTHDAY:</string>
    <string name="history_title_tv">History</string>
    <string name="history_page_bt_year">2015</string>
    <string name="history_page_bt_month">February</string>
    <string name="history_page_bt_day">09</string>
    <string name="history_page_unit">Unit:℃</string>
    <string name="history_page_time">Time:</string>
    <string name="history_page_tv_time">day</string>
    <string name="history_page_tv_maxtemp">38.2℃</string>
    <string name="settint_title_tv">Feature Set</string>
    <string name="setting_tv_function">Anti lost alarm</string>
    <string name="setting_tv_open">open</string>
    <string name="setting_tv_close">close</string>
    <string name="setting_tv_temp">Fever Alarm</string>
    <string name="setting_tv_alowesttemp">0℃ above</string>
    <string name="setting_tv_highesttemp">80℃ above</string>
    <string name="setting_tv_cry">Kicking alarm</string>
    <string name="setting_tv_fever">Fever alarm</string>
    <string name="setting_tv_cold_proof">Cold dressing alarm</string>
    <string name="setting_tv_cold_temp">30.0 ℃ or less</string>
    <string name="setting_tv_decibel">More than 60dB</string>
    <string name="setting_tv_real">thermometer mode</string>
    <string name="setting_tv_mode">Type Of Alarm</string>
    <string name="setting_tv_device">Device</string>
    <string name="setting_tv_down_fever" tools:ignore="MissingTranslation">Nursing station</string>
    <string name="setting_tv_about">About</string>
    <string name="typeofalarm_title_tv">Type Of Alarm</string>
    <string name="typeofalarm_tv_lost">Anti lost alarm mode</string>
    <string name="typeofalarm_tv_lost_type">shake</string>
    <string name="typeofalarm_tv_bells">bells</string>
    <string name="typeofalarm_tv_bells_name">Youth autograph album</string>
    <string name="typeofalarm_tv_fever">Fever alarm way</string>
    <string name="typeofalarm_tv_fever_type">bells</string>
    <string name="typeofalarm_tv_cry">Cry alarm way</string>
    <string name="typeofalarm_tv_cry_type">Vibration + bell</string>
    <string name="typeofalarm_tv_kickaquilt">Kicking alarm</string>
    <string name="setmusic_selectbtn">choice</string>
    <string name="setmusic_cancelbtn">cancel</string>
    <string name="about_title_tv">About</string>
    <string name="about_null_versionNum">Version not detected</string>
    <string name="about_tv_versionNum">Version Number:V</string>
    <string name="about_tv1">Version Number:V1.01</string>
    <string name="about_btn_tv">Version Check</string>
    <string name="about_tv2">(User License Agreement)</string>
    <string name="about_tv3" tools:ignore="StringEscaping">(User License Agreement)</string>
    <string name="about_tv4">All rights reserved</string>
    <string name="about_tv5">Copyright © 2014-2015 AndroidEx</string>
    <string name="about_tv6">All rights reserved</string>
    <string name="device_title_tv">Device</string>
    <string name="device_title_text1">The connected device</string>
    <string name="device_title_text2">search equipment</string>
    <string name="device_btn_connect">connect</string>
    <string name="device_btn_disconnect">disconnect</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported</string>
    <string name="unknown_device">Unknown device</string>
    <string name="device_connect">Are connected devices...</string>
    <string name="downfever_title_tv">emergency calling</string>
    <string name="downfever_tv_commonsense">Baby fever common sense</string>
    <string name="downfever_tv_massage">Massage Reducing Method</string>
    <string name="downfever_tv_physics">Physical Reducing Method</string>
    <string name="downfever_tv_taboo">Four Prohibitions in Eating</string>
    <string name="downfever_tv_matters">Attentions in Daily Care</string>
    <string name="massage_tv_title" tools:ignore="MissingTranslation">Five Massage Reducing Methods</string>
    <string name="massage_tv_title1" tools:ignore="MissingTranslation">1, Clear the Lung Meridian</string>
    <string name="massage_tv_title1_place" tools:ignore="MissingTranslation">Position: the ring finger’s pulp</string>
    <string name="massage_tv_title1_method" tools:ignore="MissingTranslation">Operation: Pinch the baby’s ring finger with your thumb
        and index finger. Push 50 times from the finger top to the end. Thus clear the baby’s lung
        meridian.
    </string>
    <string name="historylist_title_tv">history</string>
    <string name="historylist_title_text">Have a fever to record</string>
    <string name="historylist_tv_titile">According to the button text said the current setting of
        the ListView
    </string>
    <string name="historylist_bt_canPullRefBtn">To enable the drop-down refresh</string>
    <string name="historylist_bt_canLoadMoreFlagBtn">Enable to load more</string>
    <string name="historylist_bt_autoLoadMoreFlagBtn">Shut down automatically loaded more</string>
    <string name="historylist_bt_isMoveToFirstItemBtn">Close to move to the first Item</string>
    <string name="historylist_item_date">2015.02.04</string>
    <string name="historylist_item_fever">Fever: have fever</string>
    <string name="historylist_item_start_time">start time</string>
    <string name="historylist_item_starttime">12:12:10</string>
    <string name="historylist_item_duration_time">continued to</string>
    <string name="historylist_item_durationtime">15:15:10</string>
    <string name="historylist_item_max_temp">highest temperature</string>
    <string name="historylist_item_maxtemp">37.6℃</string>
    <string name="historylist_item_min_temp">lowest temperature</string>
    <string name="historylist_item_mintemp">36.8℃</string>
    <string name="p2refresh_head_load_more">To load more</string>
    <string name="p2refresh_end_load_more">More</string>
    <string name="p2refresh_end_click_load_more">Click on the load</string>
    <string name="p2refresh_release_refresh">Loosen the refresh</string>
    <string name="p2refresh_pull_to_refresh">pull-to-refresh</string>
    <string name="p2refresh_doing_head_refresh">Is refreshing&#8230;</string>
    <string name="p2refresh_doing_end_refresh">Loading&#8230;</string>
    <string name="p2refresh_refresh_lasttime">recent updates&#160;&#058;&#160;</string>
    <string name="pointMessage">Prompt Message</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="adduser_username">Please input user name</string>
    <string name="adduser_userdate">Please enter the date of birth</string>
    <string name="adduser_pic">Get photo way</string>
    <string name="adduser_photograph">Photograph</string>
    <string name="adduser_phone">Choose from the phone</string>
    <string name="adduser_back">return</string>
    <string name="adduser_date">Please select a date and time</string>
    <string name="adduser_year">年</string>
    <string name="adduser_month">月</string>
    <string name="adduser_day">日</string>
    <string name="adduser_month_unit">month</string>
    <string name="adduser_day_unit">day</string>
    <string name="adduser_hour_unit">hour</string>
    <string name="adduser_years">years</string>
    <string name="bledevice_toast1">The current user has binding a device!</string>
    <string name="bledevice_toast2">Create a user and then click the binding equipment!</string>
    <string name="bledevice_toast3">already connected</string>
    <string name="bledevice_toast4">has been disconnected</string>
    <string name="bledevice_toast5">Time synchronization equipment successfully</string>
    <string name="bledevice_toast6">Time synchronization equipment failure</string>
    <string name="historylist_fever" tools:ignore="MissingTranslation">Fever: have fever</string>
    <string name="main_exit" tools:ignore="MissingTranslation">Press the return key once again and exit the program</string>
    <string name="typeofalarm_shake">shake</string>
    <string name="typeofalarm_bells">bells</string>
    <string name="typeofalarm_shake_bells">shake + bells</string>
    <string name="setting_tv_temperature">Low temp</string>
    <string name="setting_tv_temperature2">High temp</string>
    <string name="setting_tv_lowhum">Low humi</string>
    <string name="setting_tv_highhum">High humi</string>
    <string name="setting_tv_alarm">Alerm Setting</string>
    <string name="label_login">登录</string>
    <string name="label_automatic_login">自动登录</string>
    <string name="label_finish">提交</string>
    <string name="label_user_login">用户登录</string>
    <string name="hint_password">密码</string>
    <string name="hint_authcode">验证码</string>
    <string name="label_reg_by_phone">手机号注册</string>
    <string name="label_forget_password">忘记密码？</string>
    <string name="label_send_mobile_code">获取验证码</string>
    <string name="setting_tv_highesthum">80℃</string>
    <string name="typeofalarm_tv_distance">距离报警方式</string>
</resources>