<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:id="@+id/rl_device"
    android:paddingBottom="@dimen/marginPadding10"
    android:paddingTop="@dimen/marginPadding10">

    <LinearLayout
        android:id="@+id/ll_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/marginPadding16">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_name0"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lines="1"
            android:text="@string/user_name"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_name"
        android:layout_marginLeft="@dimen/marginPadding16">

        <TextView
            android:id="@+id/main_tv_binding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/user_binding"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tv_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_device"
            android:textColor="@color/white" />
    </LinearLayout>

    <ImageView
        android:id="@+id/iv_connect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/marginPadding10"
        android:layout_toLeftOf="@+id/iv_lock"
        android:src="@mipmap/starts_connect2" />

    <ImageView
        android:id="@+id/iv_lock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/marginPadding16"
        android:src="@mipmap/lock_close1" />

</RelativeLayout>