<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background"
    android:orientation="vertical">

    <com.androidex.capbox.ui.widget.SecondTitleBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        app:titleText="@string/setting_tv_alarm" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/tv_line_height"
                android:background="@color/line_color" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/tv_line_height"
                android:background="@color/line_color" />

            <LinearLayout
                android:id="@+id/ll_lowestTemp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/adduser_ll_height"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/marginPadding16">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="@dimen/setting_tv_padding_left"
                    android:text="@string/setting_tv_temperature"
                    android:textColor="@color/white"
                    android:textSize="@dimen/size16" />

                <TextView
                    android:id="@+id/tv_lowestTemp"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/setting_btn_right_height"
                    android:gravity="center"
                    android:text="@string/setting_tv_alowesttemp"
                    android:textColor="@color/white"
                    android:textSize="@dimen/setting_tv_call_temp" />

                <ImageView
                    android:layout_width="@dimen/marginPadding20"
                    android:layout_height="@dimen/marginPadding20"
                    android:layout_marginRight="@dimen/marginPadding30"
                    android:src="@mipmap/white_right" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/tv_line_height"
                android:background="@color/line_color" />


            <LinearLayout
                android:id="@+id/ll_highestTemp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/adduser_ll_height"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/marginPadding16">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="@dimen/setting_tv_padding_left"
                    android:text="@string/setting_tv_temperature2"
                    android:textColor="@color/white"
                    android:textSize="@dimen/size16" />

                <TextView
                    android:id="@+id/tv_highestTemp"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/setting_btn_right_height"
                    android:gravity="center"
                    android:text="@string/setting_tv_highesttemp"
                    android:textColor="@color/white"
                    android:textSize="@dimen/setting_tv_call_temp" />

                <ImageView
                    android:layout_width="@dimen/marginPadding20"
                    android:layout_height="@dimen/marginPadding20"
                    android:layout_marginRight="@dimen/marginPadding30"
                    android:src="@mipmap/white_right" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/tv_line_height"
                android:background="@color/line_color" />

            <LinearLayout
                android:id="@+id/ll_lowestHum"
                android:layout_width="match_parent"
                android:layout_height="@dimen/adduser_ll_height"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/marginPadding16">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="@dimen/setting_tv_padding_left"
                    android:text="@string/setting_tv_lowhum"
                    android:textColor="@color/white"
                    android:textSize="@dimen/size16" />

                <TextView
                    android:id="@+id/tv_lowestHum"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/setting_btn_right_height"
                    android:gravity="center"
                    android:text="@string/setting_tv_alowesttemp"
                    android:textColor="@color/white"
                    android:textSize="@dimen/setting_tv_call_temp" />

                <ImageView
                    android:layout_width="@dimen/marginPadding20"
                    android:layout_height="@dimen/marginPadding20"
                    android:layout_marginRight="@dimen/marginPadding30"
                    android:src="@mipmap/white_right" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/tv_line_height"
                android:background="@color/line_color" />


            <LinearLayout
                android:id="@+id/ll_highestHum"
                android:layout_width="match_parent"
                android:layout_height="@dimen/adduser_ll_height"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/marginPadding16">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="@dimen/setting_tv_padding_left"
                    android:text="@string/setting_tv_highhum"
                    android:textColor="@color/white"
                    android:textSize="@dimen/size16" />

                <TextView
                    android:id="@+id/tv_highestHum"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/setting_btn_right_height"
                    android:gravity="center"
                    android:text="@string/setting_tv_highesthum"
                    android:textColor="@color/white"
                    android:textSize="@dimen/setting_tv_call_temp" />

                <ImageView
                    android:layout_width="@dimen/marginPadding20"
                    android:layout_height="@dimen/marginPadding20"
                    android:layout_marginRight="@dimen/marginPadding30"
                    android:src="@mipmap/white_right" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/tv_line_height"
                android:background="@color/line_color" />

            <TextView
                android:id="@+id/tv_finish"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="@dimen/marginPadding16"
                android:layout_marginLeft="@dimen/marginPadding16"
                android:layout_marginRight="@dimen/marginPadding16"
                android:layout_marginTop="@dimen/marginPadding50"
                android:background="@drawable/sel_bg_dark_blue_radius_5"
                android:enabled="true"
                android:gravity="center"
                android:text="@string/label_finish"
                android:textColor="@color/white"
                android:textSize="15sp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>