<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background"
    android:orientation="vertical"
    tools:context="com.androidex.capbox.ui.activity.LoginActivity">

    <com.androidex.capbox.ui.widget.ThirdTitleBar
        android:id="@+id/thirdtitlebar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleText="@string/label_login" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fadingEdge="none"
        android:overScrollMode="never"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/marginPadding32">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/marginPadding16">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="fitCenter"
                    android:src="@mipmap/ic_label_username1" />

                <EditText
                    android:id="@+id/et_phone"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:background="@android:color/transparent"
                    android:hint="@string/label_user_login"
                    android:inputType="phone"
                    android:paddingLeft="@dimen/marginPadding16"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="#737578"
                    android:textSize="15sp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/divider_color" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/marginPadding16">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:scaleType="fitCenter"
                    android:src="@mipmap/ic_password" />

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:background="@android:color/transparent"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:paddingLeft="@dimen/marginPadding16"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="#737578"
                    android:textSize="15sp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/divider_color" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/marginPadding16">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:scaleType="fitCenter"
                    android:src="@mipmap/ic_authcode" />

                <EditText
                    android:id="@+id/et_authcode"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:hint="@string/hint_authcode"
                    android:inputType="textPassword"
                    android:lines="1"
                    android:paddingLeft="@dimen/marginPadding16"
                    android:textColor="@color/white"
                    android:textColorHint="#737578"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_authcode"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/label_send_mobile_code"
                    android:textColor="@color/white" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/divider_color" />

            <CheckBox
                android:id="@+id/cb_automatic_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginRight="@dimen/marginPadding16"
                android:paddingLeft="@dimen/marginPadding8"
                android:scaleX="0.70"
                android:scaleY="0.70"
                android:text="@string/label_automatic_login"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tv_login"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="@dimen/marginPadding16"
                android:layout_marginRight="@dimen/marginPadding16"
                android:layout_marginTop="55dp"
                android:background="@drawable/sel_bg_dark_blue_radius_5"
                android:enabled="false"
                android:gravity="center"
                android:text="@string/label_login"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_register"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_alignParentRight="true"
                android:layout_margin="14dp"
                android:background="@drawable/sel_bg_bt_dark_gray_radius_5"
                android:gravity="center"
                android:text="@string/label_reg_by_phone"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_forgetPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_margin="14dp"
                android:text="@string/label_forget_password"
                android:textColor="@color/white"
                android:textSize="14sp" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
